# CineVerse

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py  requirements.txt  test.py
src/api/: dependencies.py
src/api/routers/: activity_router.py  auth_router.py  films_router.py  users_router.py  watchlist_router.py
src/application/: activity_service.py  films_service.py  users_service.py  watchlist_service.py
src/core/: config.py  jwt_manager.py  security.py
src/domain/activity/: models.py  repository.py  schemas.py
src/domain/films/: models.py  repository.py  schemas.py
src/domain/users/: models.py  repository.py  schemas.py
src/domain/watchlist/: models.py  repository.py  schemas.py
src/infrastructure/: memory_db.py
src/tests/: conftest.py  test_activity.py  test_auth.py  test_core.py  test_films.py  test_services.py  test_users.py  test_watchlist.py
