[project]
name = "cineverse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.121.2",
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.4",
    "pytest-cov>=7.0.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.44",
    "typing>=3.10.0.0",
    "uuid>=1.30",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--ignore=infrastructure"
testpaths = ["src/tests"]
